THe rpc library is no longer needed/available.

--- a/x11/xview/xview/config/XView.tmpl
+++ b/x11/xview/xview/config/XView.tmpl
@@ -389,7 +389,7 @@
 #define XViewClientDepLibs 
 #endif
 #ifndef XViewClientLibs
-#define XViewClientLibs $(XVIEWLIB) $(OLGXLIB) $(XLIB) $(XVCLIENTMISCLIB) -lrpc -lgnuregex
+#define XViewClientLibs $(XVIEWLIB) $(OLGXLIB) $(XLIB) $(XVCLIENTMISCLIB) -lgnuregex
 #endif
 /*
  *	Define libraries for XView clients using XVPS
@@ -399,7 +399,7 @@
 # define XViewPSClientDepLibs
 # endif
 # ifndef XViewPSClientLibs
-# define XViewPSClientLibs $(XVPSLIB) $(XVIEWLIB) $(OLGXLIB) $(XLIB) $(CPSLIB) -lrpc
+# define XViewPSClientLibs $(XVPSLIB) $(XVIEWLIB) $(OLGXLIB) $(XLIB) $(CPSLIB)
 # endif
 #endif
 /*
