Don't link with gnuregex!

--- a/x11/xview/xview/config/XView.tmpl
+++ b/x11/xview/xview/config/XView.tmpl
@@ -389,7 +389,7 @@
 #define XViewClientDepLibs 
 #endif
 #ifndef XViewClientLibs
-#define XViewClientLibs $(XVIEWLIB) $(OLGXLIB) $(XLIB) $(XVCLIENTMISCLIB) -lgnuregex
+#define XViewClientLibs $(XVIEWLIB) $(OLGXLIB) $(XLIB) $(XVCLIENTMISCLIB)
 #endif
 /*
  *	Define libraries for XView clients using XVPS
