Fixed the tiff support now that we have a separate tiff library. Fixed the pkg target.

--- a/x11/pbmplus/Pbmplus.tmpl
+++ b/x11/pbmplus/Pbmplus.tmpl
@@ -117,7 +117,7 @@
 #define LibPnm $(PNMDIR)/libpnm.a
 #endif
 #ifndef LibTiff
-#define LibTiff $(TIFFDIR)/libtiff.a
+#define LibTiff -ltiff
 #endif
 
 /* Dependency libraries: */
@@ -209,3 +209,6 @@ install:: list                                                              @@\
 #endif /* InstallPbmplusPrograms */
 
 #endif /* InstallMerged */
+
+pkg:	all install install.man pkg/+ONELINE pkg/+DESC pkg/+PLIST
+	pkg_create -v -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST pbmplus_bin
