Fix up some especially evil Makefiles here and there.

--- a/x11/pbmplus/Pbmplus.tmpl
+++ b/x11/pbmplus/Pbmplus.tmpl
@@ -100,7 +100,7 @@
 #define PnmDir TOPDIR/pnm
 #endif
 #ifndef TiffDir
-#define TiffDir TOPDIR/libtiff
+#define TiffDir TOPDIR/../tiff
 #endif
 
 /* Libraries: */
